# python-netfoundry

./: .bitbucket-pipelines.yml  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile.demo  MANIFEST.in  README.md  README.txt  bitbucket-pipelines.yml  example-10-create-network.py  example-20-find-dataCenter.py  example-20-network.py  example-40-fabric.py  example-50-hosted-fabric.py  example-60-appwan.py  example-60-endpoints.py  example-80-appwan.py  example.py  legacy.py  netfoundry.py  nfmop.py  pypirc  pyproject.toml  requirements-nfsupport.txt  setup.cfg  setup.py
.github/workflows/: docker-image.yml  main.yml  mattermost-ziti-webhook.yml  python-publish.yml
docker/: Dockerfile  Dockerfile.demo
netfoundry/: __init__.py  _version.py  base.py  ctl.py  demo-appwan.py  demo-endpoints.py  demo-fabric.py  demo-network.py  demo.py  exceptions.py  logger_base.py  mgmt.py  network.py  network_group.py  organization.py  table_lexer.py  utility.py  version.py
scripts/: README.md  test-demo.sh
src/netfoundry/: _version.py
