[metadata]
name = netfoundry
project_urls =
    Documentation = https://developer.netfoundry.io/guides/python/
    Source = https://github.com/netfoundry/python-netfoundry/
    Tracker = https://github.com/netfoundry/python-netfoundry/issues

description = Interface to the NetFoundry network-as-code orchestration platform
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Kenneth Bingham
author_email = kenneth.bingham@netfoundry.io
maintainer = NetFoundry
maintainer_email = support@netfoundry.io
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    inflect >= 5.3
    milc >= 1.8.0
    packaging >= 20.9
    platformdirs >= 2.4
    pygments >= 2.11
    pyjwt >= 2.3
    pyyaml >= 5.4
    requests >= 2.30
    tabulate >= 0.8
    requests-cache >= 0.9.4
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1
python_tag = py3

[options.package_data]
    netfoundry = friendly-words/generated/words.json

[options.entry_points]
console_scripts =
    nfdemo = netfoundry.demo:main
    nfctl = netfoundry.ctl:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = netfoundry/_version.py
versionfile_build = netfoundry/_version.py
tag_prefix = v
